# studiolocal

./: .gitignore  README.md  models.yaml  pyproject.toml
.claude/skills/studio-cleanup/: SKILL.md
.claude/skills/studio-discard/: SKILL.md
.claude/skills/studio-image/: SKILL.md
.claude/skills/studio-project/: SKILL.md
.claude/skills/studio-promote/: SKILL.md
.claude/skills/studio-report/: SKILL.md
.claude/skills/studio-run/: SKILL.md
.claude/skills/studio-status/: SKILL.md
.claude/skills/studio-upscale/: SKILL.md
.claude/skills/studio-video/: SKILL.md
.claude/skills/studio-workflow/: SKILL.md
.claude/skills/studiolocal-install/: SKILL.md
docs/: DESIGN.md
lib/: __init__.py  asset_store.py  cleanup_engine.py  cli.py  env_loader.py  fal_client.py  models_registry.py  report_generator.py  session_manager.py  tracker.py  workflow_runner.py  workspace_detector.py
lib/prompts/: workflow_extraction.md
migrations/: 001_initial.sql  002_indexes.sql
scripts/: bootstrap-skill.md  doctor.sh  install.sh  symlink-skills.sh
templates/: BRIEF.md.tmpl  env.tmpl  project_README.md.tmpl  workflow.yaml.tmpl
tests/: test_asset_store.py  test_models_registry.py  test_tracker.py  test_workflow_runner.py  test_workflow_runner_integration.py  test_workspace_detector.py
