[project]
name = "studiolocal"
version = "0.1.0"
description = "Setup de geração de imagem/vídeo via Fal.ai operado via Claude Code"
authors = [{ name = "David Benalcázar Chang", email = "david@metakosmos.com.br" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fal-client>=0.5.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[project.scripts]
studiolocal = "lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
